# SandboxBevy

./: .gitattributes  .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
assets/models/FlightHelmet/: FlightHelmet.gltf
assets/shaders/custom_shader/: custom_material.wgsl
cheatbook/: Cargo.toml
cheatbook/examples/fps/src/: main.rs
cheatbook/examples/screen_space/src/: main.rs
example/: test.rs
example/example_00_text/: text_rendering.rs
example/example_01_text_update/: text_update.rs
projects/animation_test/: Cargo.toml
projects/animation_test/src/: main.rs
projects/arkanoid/: Cargo.toml
projects/bevy_ecs_test/: Cargo.toml
projects/bevy_ecs_test/src/: main.rs
projects/cards/: Cargo.toml
projects/cards/assets/: post_process.wgsl
projects/cards/src/: custom_pass.rs  main.rs
projects/character_controller_3d/: Cargo.toml
projects/character_controller_3d/src/: main.rs
projects/chess/: Cargo.toml
projects/chess/src/: board.rs  main.rs  pieces.rs
projects/dialog/: Cargo.toml
projects/dialog/src/: main.rs
projects/platformer/: Cargo.toml
projects/shaders_test/: Cargo.toml
projects/shooter/: Cargo.toml
projects/shooter/src/: main.rs
projects/survival2d/: Cargo.toml
projects/survival2d/src/: main.rs
projects/turn_based/: Cargo.toml
projects/turn_based/src/: logic.rs  main.rs  unit.rs
projects/underpotato/: Cargo.toml
projects/underpotato/assets/data/: assets.toml  data.toml
projects/underpotato/assets/sprites/: bipedpotato.aseprite
projects/underpotato/src/: main.rs
projects/underpotato/src/game/: game.rs  mod.rs
projects/underpotato/src/game/animation/: animation.rs
projects/underpotato/src/game/camera/: mod.rs  render_layers.rs  target.rs
projects/underpotato/src/game/data/: data.rs
projects/underpotato/src/game/loading/: loading.rs
projects/underpotato/src/game/physics/: mod.rs  physics.rs  physics_object.rs  rectangle.rs  timestep.rs
projects/underpotato/src/game/player/: player.rs
projects/underpotato/src/game/scene/: attacks.rs  battle.rs  mod.rs
projects/underpotato/src/game/scene/internal/: attack.rs  bullet_board.rs  decisions.rs  dodging.rs  enemy_health.rs  fight.rs  health.rs  menu.rs  menu_transition.rs  mod.rs  opponent.rs  progress.rs  scene.rs  selection.rs  stats.rs  text.rs
projects/underpotato/src/game/scene/internal/death/: enemy_death.rs  mod.rs  restart_screen.rs
projects/underpotato/src/game/scene/internal/helpers/: despawn.rs  menu_item.rs  mod.rs
projects/underpotato/src/game/sound/: sound.rs
projects/underpotato/src/game/state/: state.rs
projects/underpotato/src/game/toml/: toml.rs
src/: bin2.rs  main.rs
