[package]
default-run = "shooter_bevy"
name = "shooter_bevy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
incremental = false
debug = false

[dependencies]
bevy = { version = "0.14.2", features = ["dynamic_linking"] }
iyes_perf_ui = "0.3.0"
rand = "0.8.5"
# For 2D applications:
avian2d = "0.1.2"
# For 3D applications:
avian3d = { version = "0.1.2", features = ["debug-plugin"] }
bevy_egui = "0.29"


[[bin]]
name = "shooter_test"
path = "src/bin/shooter_test/shooter_test.rs"
test = false
bench = false

[[bin]]
name = "custom_material"
path = "src/bin/custom_material/custom_material.rs"
test = false
bench = false

[[bin]]
name = "bin2"
path = "src/bin2.rs"
test = false
bench = false

[[bin]]
name = "platformer"
path = "src/bin/platformer/platformer.rs"
test = false
bench = false

[[bin]]
name = "model3d"
path = "src/bin/model/model3d.rs"
test = false
bench = false


[[bin]]
name = "voxel"
path = "src/bin/voxel/main.rs"
test = false
bench = false


[[example]]
name = "hello_world"
path = "example/test.rs"
doc-scrape-examples = true
