[package]
default-run = "rpg"
name = "sandbox_bevy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
incremental = false
debug = false

[dependencies]
bevy = { version = "0.15.0" }#, features = ["dynamic_linking"] }
iyes_perf_ui = "0.3.0"
rand = "0.8.5"
# For 2D applications:
avian2d =  { version = "0.2.0" }
# For 3D applications:
avian3d = { version = "0.2.0" }
bevy_egui = "0.31.1"


[workspace]
members = [
    "projects/bevy_ecs_test",
    "projects/cards",
    "projects/dialog",
    "projects/shooter",
    "projects/character_controller_3d"
]


[[bin]]
name = "platformer"
path = "src/bin/platformer/platformer.rs"
test = false
bench = false

[[bin]]
name = "rpg"
path = "src/bin/rpg/rpg.rs"
test = false
bench = false

[[bin]]
name = "mines"
path = "src/bin/mines/mines.rs"
test = false
bench = false



[[bin]]
name = "model3d"
path = "src/bin/model/load_gltf.rs"
test = false
bench = false
