[package]
name = "cheatbook"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.16.1", features = ["dynamic_linking"] }
iyes_perf_ui = { version = "0.5.0" }

[[bin]]
name = "camera_example"
path = "examples/camera/src/main.rs"

[[bin]]
name = "fps"
path = "examples/fps/src/main.rs"
[[bin]]
name = "screen_space"
path = "examples/screen_space/src/main.rs"