[package]
name = "underpotato"
version = "0.1.0"
edition = "2021"

#[workspace]

[dependencies]
rand = "0.8"
bevy = { version = "0.16.0", features = ["wav"] }
bevy_dylib = "0.16.0"
bevy_ecs_tilemap = { version = "0.16.0", features = ["atlas"] }
tiled = { version = "0.11.0", default-features = false }
thiserror = { version = "1.0" }
bytemuck = "1.7"
serde_spanned = "0.6.7"
serde = { version = "1.0", features = ["derive"] }
log = { version = "*", features = ["max_level_debug", "release_max_level_warn"] }
crevice = "0.16.0"
toml = "0.8.19"
bevy-inspector-egui = "0.31"